--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".activity.MainActivity">
+    tools:context="com.zurich.mobile.activity.MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
