--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -16,38 +16,50 @@
         <item name="di_outAnimation">@anim/anim_scale_out</item>
     </style>
 
-    <style name="LightDeterminateLinearProgressDrawable" parent="Material.Drawable.LinearProgress.Determinate">
-        <item name="lpd_strokeColor">@color/colorPrimary</item>
-        <item name="lpd_strokeSecondaryColor">@color/colorPrimaryQuarter</item>
-    </style>
-    <style name="LightLinearProgressDrawable" parent="Material.Drawable.LinearProgress">
-        <item name="lpd_strokeColor">@color/colorPrimary</item>
-        <item name="lpd_strokeSecondaryColor">@android:color/transparent</item>
-    </style>
-    <style name="DarkDeterminateLinearProgressDrawable" parent="Material.Drawable.LinearProgress.Determinate">
-        <item name="lpd_strokeColor">@color/colorAccent</item>
-        <item name="lpd_strokeSecondaryColor">@color/colorAccentQuarter</item>
-        <item name="lpd_reverse">true</item>
-    </style>
-    <style name="DarkDeterminateLinearProgressView" parent="LightLinearProgressView">
-        <item name="pv_progressStyle">@style/DarkDeterminateLinearProgressDrawable</item>
-        <item name="pv_progressMode">determinate</item>
-    </style>
-    <style name="LightLinearProgressView">
-        <item name="pv_autostart">false</item>
-        <item name="pv_circular">false</item>
-        <item name="pv_progressStyle">@style/LightLinearProgressDrawable</item>
-        <item name="pv_progressMode">indeterminate</item>
+    <!--管理中心style-->
+    <style name="ManageCenterRelative">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/ripple_manage_button</item>
+        <item name="android:paddingBottom">15dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:paddingTop">10dp</item>
     </style>
 
-    <style name="LightDeterminateLinearProgressView" parent="LightLinearProgressView">
-        <item name="pv_progressStyle">@style/LightDeterminateLinearProgressDrawable</item>
-        <item name="pv_progressMode">determinate</item>
+    <style name="ManageCenterRelativeTitle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_marginLeft">3dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:textColor">@color/text_normal</item>
+        <item name="android:textSize">15dp</item>
     </style>
 
-    <style name="LightQueryLinearProgressView" parent="LightLinearProgressView">
-        <item name="pv_progressStyle">@style/LightDeterminateLinearProgressDrawable</item>
-        <item name="pv_progressMode">query</item>
+    <style name="ManageCenterRelativeInfo">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_marginLeft">3dp</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:textColor">#777777</item>
+    </style>
+
+    <style name="ManageCenterExtraFunction">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingBottom">5dp</item>
+        <item name="android:paddingRight">15dp</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:drawablePadding">8dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:background">@drawable/ripple_manage_button</item>
     </style>
 
 </resources>
