--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.zurich.mobile.activity.MainActivity">
+    android:background="@color/white_bg"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <RadioGroup
+        android:id="@+id/layout_navigationActivity_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+
+        <RadioButton
+            android:id="@+id/radio_mainActivity_safe"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/ripple_button_bg"
+            android:paddingTop="7dp"
+            android:paddingBottom="4dp"
+            android:gravity="center"
+            android:textSize="12dp"
+            android:textColor="@color/text_normal"
+            android:button="@null"
+            android:text="手机防护"/>
+
+        <RadioButton
+            android:id="@+id/radio_mainActivity_normal"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/ripple_button_bg"
+            android:paddingTop="7dp"
+            android:paddingBottom="4dp"
+            android:gravity="center"
+            android:textSize="12dp"
+            android:textColor="@color/text_normal"
+            android:button="@null"
+            android:text="常用功能"/>
+
+        <RadioButton
+            android:id="@+id/radio_mainActivity_manage"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@drawable/ripple_button_bg"
+            android:paddingTop="7dp"
+            android:paddingBottom="4dp"
+            android:gravity="center"
+            android:textSize="12dp"
+            android:textColor="@color/text_normal"
+            android:button="@null"
+            android:text="管理中心"/>
+    </RadioGroup>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#ffd7d7d7"
+        android:layout_alignTop="@id/layout_navigationActivity_tabs"/>
+
+    <com.zurich.mobile.view.ViewPagerCompat
+        android:id="@+id/pager_navigationActivity_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/layout_navigationActivity_tabs"/>
+
 </RelativeLayout>
+
