1.搭建管理中心页面，实现google检测

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_bg"
+    android:background="@color/white"
     android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary">
+
+    </android.support.v7.widget.Toolbar>
 
     <RadioGroup
         android:id="@+id/layout_navigationActivity_tabs"
         android:layout_width="match_parent"
         android:layout_height="44dp"
+        android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/radio_mainActivity_safe"
@@ -21,13 +27,13 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:background="@drawable/ripple_button_bg"
-            android:paddingTop="7dp"
-            android:paddingBottom="4dp"
-            android:gravity="center"
-            android:textSize="12dp"
-            android:textColor="@color/text_normal"
             android:button="@null"
-            android:text="手机防护"/>
+            android:gravity="center"
+            android:paddingBottom="4dp"
+            android:paddingTop="7dp"
+            android:text="手机防护"
+            android:textColor="@color/text_normal"
+            android:textSize="12dp" />
 
         <RadioButton
             android:id="@+id/radio_mainActivity_normal"
@@ -35,13 +41,13 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:background="@drawable/ripple_button_bg"
-            android:paddingTop="7dp"
-            android:paddingBottom="4dp"
-            android:gravity="center"
-            android:textSize="12dp"
-            android:textColor="@color/text_normal"
             android:button="@null"
-            android:text="常用功能"/>
+            android:gravity="center"
+            android:paddingBottom="4dp"
+            android:paddingTop="7dp"
+            android:text="常用功能"
+            android:textColor="@color/text_normal"
+            android:textSize="12dp" />
 
         <RadioButton
             android:id="@+id/radio_mainActivity_manage"
@@ -49,26 +55,27 @@
             android:layout_height="50dp"
             android:layout_weight="1"
             android:background="@drawable/ripple_button_bg"
-            android:paddingTop="7dp"
-            android:paddingBottom="4dp"
-            android:gravity="center"
-            android:textSize="12dp"
-            android:textColor="@color/text_normal"
             android:button="@null"
-            android:text="管理中心"/>
+            android:gravity="center"
+            android:paddingBottom="4dp"
+            android:paddingTop="7dp"
+            android:text="管理中心"
+            android:textColor="@color/text_normal"
+            android:textSize="12dp" />
     </RadioGroup>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="#ffd7d7d7"
-        android:layout_alignTop="@id/layout_navigationActivity_tabs"/>
+        android:layout_alignTop="@id/layout_navigationActivity_tabs"
+        android:background="#ffd7d7d7" />
 
     <com.zurich.mobile.view.ViewPagerCompat
         android:id="@+id/pager_navigationActivity_content"
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/layout_navigationActivity_tabs"/>
+        android:layout_above="@id/layout_navigationActivity_tabs" />
 
 </RelativeLayout>
 
