--- a/app/src/main/res/layout/fragment_manage_center.xml
+++ b/app/src/main/res/layout/fragment_manage_center.xml
@@ -8,8 +8,7 @@
     <ScrollView
         android:id="@+id/sc_root_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingTop="30dp">
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
