--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <declare-styleable name="CustomTheme">
+        <attr name="gifMoviewViewStyle" format="reference"/>
+    </declare-styleable>
+    <declare-styleable name="GifMoviewView">
+        <attr name="gif" format="reference"/>
+        <attr name="paused" format="boolean"/>
+    </declare-styleable>
+    <style name="Widget.GifMoviewView" parent="@android:style/Widget"/>
 
+
+    <declare-styleable name="SettingLayout">
+        <attr name="setting_name" format="string"/>
+        <attr name="setting_sub_name" format="string"/>
+        <attr name="setting_icon" format="reference"/>
+    </declare-styleable>
 </resources>
