--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,9 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary">
-
-    </android.support.v7.widget.Toolbar>
+    <include
+        android:id="@+id/main_tool_bar"
+        layout="@layout/toolbar_layout" />
 
     <RadioGroup
         android:id="@+id/layout_navigationActivity_tabs"
@@ -72,10 +68,10 @@
 
     <com.zurich.mobile.view.ViewPagerCompat
         android:id="@+id/pager_navigationActivity_content"
-        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/layout_navigationActivity_tabs" />
+        android:layout_above="@id/layout_navigationActivity_tabs"
+        android:layout_below="@id/main_tool_bar" />
 
 </RelativeLayout>
 
