--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl_splash_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
-    android:id="@+id/rl_splash_root"
     tools:context="com.zurich.mobile.activity.MainActivity">
 
+    <com.zurich.mobile.view.kbv.KenBurnsView
+        android:id="@+id/kenBurnsView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="手机安全卫士"
-        android:textSize="35dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="127dp"
-        android:id="@+id/tv_name" />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_launcher"
-        android:layout_below="@+id/tv_name"
-        android:layout_alignRight="@+id/tv_name"
-        android:layout_alignEnd="@+id/tv_name"
-        android:layout_above="@+id/tv_wec"
-        android:layout_alignLeft="@+id/tv_name"
-        android:layout_alignStart="@+id/tv_name" />
+        android:text="手机安全卫士"
+        android:textSize="35dp" />
+
+    <TextView
+        android:id="@+id/splsh_logo"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_centerInParent="true"
+        android:alpha="0.0"
+        android:background="@drawable/ic_launcher" />
+
     <TextView
         android:id="@+id/tv_wec"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="精简极致体验 v2.0"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="166dp" />
+        android:layout_marginBottom="166dp"
+        android:text="精简极致体验 v2.0" />
 </RelativeLayout>
