--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,4 +66,44 @@
         <item name="android:background">@drawable/ripple_manage_button</item>
     </style>
 
+    <style name="BottomLine">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">#FFD7D7D7</item>
+    </style>
+
+    <style name="ListDivider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">@drawable/shape_list_divider</item>
+    </style>
+
+    <style name="TextAppearance_AppName_ManageList">
+        <item name="android:textColor">#484e5a</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <!-- app title style -->
+    <style name="asset_main_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/asset_title_color</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">marquee</item>
+        <item name="android:textSize">14dip</item>
+    </style>
+
+    <!-- app other info style -->
+    <style name="asset_secondary_style" parent="asset_main_style">
+        <item name="android:textColor">@color/asset_info_color</item>
+        <item name="android:textSize">12dip</item>
+    </style>
+
+    <style name="ButtonAppearance_OpenArea_ManageList_Without_Backgound">
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">14dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+    </style>
 </resources>
