--- a/app/src/main/res/drawable/ripple_manage_button.xml
+++ b/app/src/main/res/drawable/ripple_manage_button.xml
@@ -1,13 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:color="#FFB6B6B6"
-    tools:targetApi="lollipop">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
-            <corners android:radius="4dp" />
-        </shape>
-    </item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@color/text_second" android:state_pressed="true"/>
     <item android:drawable="@drawable/rounded_corner" />
-</ripple>
+</selector>
