--- a/app/src/main/res/drawable/shape_list_divider.xml
+++ b/app/src/main/res/drawable/shape_list_divider.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetLeft="15dp"
-    android:insetRight="15dp">
+<inset xmlns:android="http://schemas.android.com/apk/res/android">
     <shape>
         <solid android:color="#f3f3f3" />
     </shape>
