--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,15 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <group
-        android:id="@+id/tb_group_main">
-
     <item
         android:id="@+id/action_settings"
-        app:showAsAction="always"
         android:icon="@drawable/ic_visibility_white_24dp"
-        android:title="setting"/>
+        android:title="setting"
+        app:showAsAction="always" />
 
-    </group>
-    
 </menu>
