--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/tool_bar_height"
     android:background="@color/colorPrimary"
-    android:minHeight="?attr/actionBarSize"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+    android:minHeight="?attr/actionBarSize">
 
     <ImageView
         android:id="@+id/iv_toolbar_back"
@@ -17,8 +15,8 @@
         android:id="@+id/tv_toolbar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:text="安全卫士"
+        android:gravity="center"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold" />
