--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -160,5 +160,24 @@
         <item name="android:text">上一步</item>
     </style>
 
+    <!--安装包清理-->
+    <style name="ExpandableListView">
+        <item name="android:cacheColorHint">@android:color/transparent</item>
+        <item name="android:divider">@drawable/shape_list_divider</item>
+        <item name="android:childDivider">@drawable/shape_list_divider</item>
+        <item name="android:listSelector">@android:color/transparent</item>
+        <item name="android:fadingEdge">none</item>
+        <item name="android:groupIndicator">@null</item>
+    </style>
+
+    <style name="ExpandableListView.NoDivider" parent="ExpandableListView">
+        <item name="android:divider">@null</item>
+        <item name="android:childDivider">@null</item>
+    </style>
+
+    <style name="HorizontalProgress" parent="Material.Widget.ProgressView.Linear.Determinate">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">10dp</item>
+    </style>
 
 </resources>
