完善安装包清理功能，界面调整

--- a/app/src/main/res/layout/list_item_package_clear_child_app.xml
+++ b/app/src/main/res/layout/list_item_package_clear_child_app.xml
@@ -68,10 +68,10 @@
             android:textSize="12dp"
             tools:text="188M" />
 
-        <ImageView
+        <com.rey.material.widget.CheckBox
             android:id="@+id/image_packageClearChildAppItem_checked"
-            android:layout_width="50dp"
-            android:layout_height="60dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:scaleType="center" />
     </LinearLayout>
