--- a/app/src/main/res/layout/activity_package_clear.xml
+++ b/app/src/main/res/layout/activity_package_clear.xml
@@ -3,7 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="false"
     android:orientation="vertical">
+
+    <include
+        android:id="@+id/pkg_clear_tool_bar"
+        layout="@layout/toolbar_layout" />
 
     <ExpandableListView
         style="@style/ExpandableListView.NoDivider"
@@ -25,10 +30,14 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
+            android:background="@drawable/selector_normal_btn"
             android:layout_marginBottom="6dp"
             android:layout_marginTop="6dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:gravity="center"
             tools:text="清理400MB垃圾"
+            android:textColor="#ffffff"
             android:textSize="15dp" />
     </LinearLayout>
 </LinearLayout>
