--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/tool_bar_height"
+    android:id="@+id/tool_bar"
     android:background="@color/colorPrimary"
     android:minHeight="?attr/actionBarSize">
 
